--- a/frontend/src/shared/Components/Layout/Navbar/Navbar.css
+++ b/frontend/src/shared/Components/Layout/Navbar/Navbar.css
@@ -42,3 +42,97 @@
     width: auto;
     max-height: 5rem; /* Giảm size xuống cho cân đối hơn */
 }
+
+.nav-menu-wrapper {
+    position: relative;
+}
+
+
+/* Dropdown không được chiếm layout */
+.dropdown-menu {
+    position: absolute;
+    top: 120%;
+    left: 0;
+    transform: translateX(0%) ;
+    min-width: 220px;
+
+    background: var(--card-background-color);
+    box-shadow: var(--card-shadow);
+    border-radius: 5px;
+    padding: 0.75rem 1rem;
+    z-index: 999;
+
+    border: 1px solid rgba(255,255,255,0.15);
+    animation: dropdownFade 0.2s ease;
+}
+
+.dropdown-menu li {
+    list-style: none;
+    padding: 0.5rem 0;
+    color: var(--card-header-border);
+    cursor: pointer;
+    transition: 0.2s;
+}
+
+.dropdown-menu li:hover {
+    color: var(--card-title-color);
+    transform: translateX(4px);
+
+}
+
+
+
+.nav-actions .btn-primary {
+    background: var(--color-da);
+}
+.nav-actions .btn-primary:hover {
+    background: var(--color-timhong);
+}
+
+.user-avatar-wrapper {
+    position: relative;
+}
+
+.user-avatar-wrapper::before {
+    content: "";
+    position: absolute;
+    top: -30px;
+    bottom: -30px;
+    left: -30px;
+    right: -30px;
+    z-index: 1;
+}
+
+
+.user-menu {
+    right: 0;
+    left: auto;
+    min-width: 140px;
+}
+
+.dropdown-menu.user-menu {
+    background: var(--card-subtitle-color);
+
+    top: 120%;
+    padding: 0.75rem 1rem;
+    transform: translateX(0%) ;
+    position: absolute;
+    animation: dropdownFade 0.2s ease;
+}
+
+@keyframes dropdownFade {
+    from {
+        opacity: 0;
+        transform: translateY(-10px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+.user-menu {
+    animation: dropdownFade 0.2s ease;
+}
+
+
