--- a/frontend/src/shared/Components/UI/Modal/Modal.css
+++ b/frontend/src/shared/Components/UI/Modal/Modal.css
@@ -27,13 +27,13 @@
 
 /* base modal */
 .modal-content {
-    background-color: white;
+    background-color: transparent;
     border-radius: 0.5rem;
     box-shadow: 0 4px 6px rgba(0,0,0,0.1);
-    border: 1px solid var(--color-border);
+    border: none;
     max-width: 100%;
     width: 100%;
-    padding: 1rem;
+    padding: 0;
 }
 
 /* header */
@@ -64,14 +64,14 @@
 /* body */
 .modal-body {
     margin-bottom: 1rem;
-    border-top: 1.5px solid var(--color-line--body);
+
 }
 
 /* footer */
 .modal-footer {
     text-align: right;
     padding-top: 0.5rem;
-    border-top: 1.5px solid var(--color-line--footer);
+
 }
 
 /* size variants */
